<resources>
    <string name="app_name">Majlis Store</string>
    <string name="imageview">ImageView</string>
    <string name="login1">Welcome to Majlis Store</string>
    <string name="login2">Shop &amp; get updates on new products, promotions and sales with our mobile app.</string>
    <string name="login3">Sign In / Sign Up</string>
    <string name="login4">Skip Sign In</string>
    <string name="signin1">Sign In</string>
    <string name="signin2">Enter Mobile Number</string>
    <string name="signin3">Send OTP</string>
    <string name="signin4">Create New Account!</string>
    <string name="verify1">Verification Code</string>
    <string name="verify2">Please enter the verification code sent to +974xxxxxx</string>
    <string name="verify3">Verify</string>
    <string name="verify4">Resend OTP</string>
    <string name="verify5">0</string>
    <string name="signup1">Create New Account</string>
    <string name="signup2">Full Name</string>
    <string name="signup3">Phone Number</string>
    <string name="signup4">E-Mail</string>
    <string name="signup5">Sign Up</string>
    <string name="signup6">By creating an account, you agree with our Terms of Use</string>
    <string name="menu_home">Home</string>
    <string name="menu_notification">Notification</string>
    <string name="menu_video">Store</string>
    <string name="menu_account">Account</string>
    <string name="edit">Edit</string>
    <string name="remove">Remove</string>
    <string name="navText1">Hi Guest,</string>
    <string name="navText2">Welcome to Majlis Store</string>
    <string name="menu_cart">Cart</string>
    <string name="menu_order">Orders</string>
    <string name="menu_search">Search</string>
    <string name="menu_shop">Shop</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_signout">Sign Out</string>
    <string name="menu_signin">Sign In</string>
    <string name="guest">Guest</string>
    <string name="accountsettings">My Profile</string>
    <string name="shippingaddress">Shipping Addresses</string>
    <string name="aboutus">About Us</string>
    <string name="appinfo">App Info</string>
    <string name="crpolicy"><![CDATA[Cancellation & Refund Policy]]></string>
    <string name="privacypolicy">Privacy Policy</string>
    <string name="reachus">Reach Us</string>
    <string name="review">Review</string>
    <string name="update">Update App</string>
    <string name="termscondition"><![CDATA[Terms & Conditions]]></string>
    <string name="faq">FAQ</string>
    <string name="youAreNotUpdatedTitle">Update Available</string>
    <string name="youAreNotUpdatedMessage">A new version of Majlis Store is available. Please update to version</string>
    <string name="youAreNotUpdatedMessage1">now.</string>
    <string name="updateapp">Update</string>
    <string name="menu_contactus">Contact Us</string>
    <string name="allrights">© Majlis Store. All Rights Reserved</string>
    <string name="done">Done</string>
    <string name="bt1_productdetails">Add to Cart</string>
    <string name="bt2_productdetails">Buy Now</string>
    <string name="message">Drop your Message</string>
    <string name="sendmessage">Send Message</string>
    <string name="ok">OK</string>
    <string name="response">Response</string>
    <string name="param_signin">mobile</string>
    <string name="response_signin1">Success</string>
    <string name="response_signin2">User blocked</string>
    <string name="response_signin3">Not Registered</string>
    <string name="response_signin4">Error</string>
    <string name="msg_signin1">Login Error</string>
    <string name="msg_signin2">Something went wrong. Please try again later.</string>
    <string name="msg_signin3">User Blocked. Please contact Majlis Store.</string>
    <string name="msg_signin4">User Not Registered. Please create an Account.</string>
    <string name="param_verifysignin1">mobile</string>
    <string name="param_verifysignin2">otp</string>
    <string name="param_verifysignin3">token</string>
    <string name="param_verifysignup1">mobile</string>
    <string name="param_verifysignup2">otp</string>
    <string name="param_verifysignup3">token</string>
    <string name="param_verifysignup4">name</string>
    <string name="param_verifysignup5">email</string>
    <string name="response_verify1">Success</string>
    <string name="response_verify2">Incorrect OTP</string>
    <string name="response_verify3">Error</string>
    <string name="msg_verify1">Verification Error</string>
    <string name="msg_verify2">Something went wrong. Please try again later.</string>
    <string name="msg_verify3">Incorrect OTP. Please check and try again.</string>
    <string name="url_signup">https://majlisstore.com/crm/api/majlisstore/sign_up</string>
    <string name="param_signup1">name</string>
    <string name="param_signup2">mobile</string>
    <string name="param_signup3">email</string>
    <string name="param_signup4">otp</string>
    <string name="response_signup1">Success</string>
    <string name="response_signup2">User Exist</string>
    <string name="response_signup3">Error</string>
    <string name="msg_signup1">Signup Error</string>
    <string name="msg_signup2">Something went wrong. Please try again later.</string>
    <string name="msg_signup3">User Exist. Please use a different Mobile Number.</string>
    <string name="param_verifyresend">mobile</string>
    <string name="signout1">SignOut</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="signout2">Are you sure you want to sign out from Majlis Store?</string>
    <string name="response_result1">result</string>
    <string name="featuredproduct">OUR PRODUCTS</string>
    <string name="top_categories">What would you like to shop today?</string>
    <string name="top_selling">Top Selling</string>
    <string name="loonuproduct">FEATURED PRODUCTS</string>
    <string name="recentlyproduct">RECENTLY VIEWED PRODUCTS</string>
    <string name="addtocart">Add to Cart</string>
    <string name="param_recently">customer_id</string>
    <string name="retry">Retry</string>
    <string name="param_subcategory">category_id</string>
    <string name="param_productdetails">product_id</string>
    <string name="param_customerid">customerid</string>
    <string name="nonet">No Internet Connection</string>
    <string name="subcategory">Sub Category</string>
    <string name="description">Description</string>
    <string name="error">Something went wrong. Please try again later.</string>
    <string name="nodetails">Details not found</string>
    <string name="cartempty">Your Cart is empty</string>
    <string name="address">Address</string>
    <string name="add_address">Add Address</string>
    <string name="full_name">Full Name</string>
    <string name="pincode">Pincode</string>
    <string name="select_state">Select State</string>
    <string name="submit">SUBMIT</string>
    <string name="edit_address">EDIT ADDRESS</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="param_addressid">addressid</string>
    <string name="checkout">CheckOut</string>
    <string name="place_order">Place Order</string>
    <string name="mode_of_payment">Mode of Payment</string>
    <string name="cash_on_delivery">Cash on Delivery</string>
    <string name="shipping_address">Shipping Address</string>
    <string name="zero">0</string>
    <string name="order_success">Order Success</string>
    <string name="your_order_is_successfully_added">Your Order is Successfully Added</string>
    <string name="select_all">Select All</string>
    <string name="remove_all">Remove All</string>
    <string name="cart_summary">Cart Summary</string>
    <string name="total_amount">Total Amount</string>
    <string name="total_items">Total Item</string>
    <string name="u20b9_0">₹ 0</string>
    <string name="payable_amount">Payable Amount</string>
    <string name="cantorder1">Can\'t Order Now!</string>
    <string name="cantorder2">Now You Can\'t Do New Orders. Please Try Again!</string>
    <string name="insufficient_quantity">Insufficient Quantity!</string>
    <string name="cart">Cart</string>
    <string name="nostock">No Stock</string>
    <string name="stockunavailable1">Stock Unavailable</string>
    <string name="stockunavailable2">One or more product is/are out of stock. Please remove and try again.</string>
    <string name="param_addcart1">item_id</string>
    <string name="param_addcart2">customerid</string>
    <string name="param_addcart3">qty</string>
    <string name="param_item_id">item_id</string>
    <string name="contact_us">Contact Us</string>
    <string name="no_products_found">No Products Found</string>
    <string name="notifications">Notifications</string>
    <string name="nonotifications">No Notification Found</string>
    <string name="order_details">Order Details</string>
    <string name="product_summary">Product Summary</string>
    <string name="order_summary">Order Summary</string>
    <string name="cancel1">CANCEL</string>
    <string name="param_orderid">order_id</string>
    <string name="paymode_cod">Payment Mode: Cash on Delivery</string>
    <string name="paymode_online">Payment Mode: Online</string>
    <string name="pay_unpaid">Payment: Unpaid</string>
    <string name="pay_paid">Payment: Paid</string>
    <string name="noorders">No Orders Found</string>
    <string name="my_orders">My Orders</string>
    <string name="specification">Specification</string>
    <string name="offer">% offer</string>
    <string name="qar">QAR</string>
    <string name="category">Category</string>
    <string name="recommended_for_you">RECOMMENDED FOR YOU</string>
    <string name="products">Products</string>
    <string name="sort1">SORT</string>
    <string name="filter">FILTER</string>
    <string name="sort_by">SORT BY</string>
    <string name="new1">New</string>
    <string name="price_low_to_high">Price - Low to High</string>
    <string name="price_high_to_low">Price - High to Low</string>
    <string name="close">Close</string>
    <string name="filters">Filters</string>
    <string name="clear_filter">Clear Filter</string>
    <string name="brands">Brands</string>
    <string name="searchproducts">Search For Products</string>
    <string name="my_profile">My Profile</string>
    <string name="name">NAME</string>
    <string name="email_id">EMAIL ID</string>
    <string name="phone_number">PHONE NUMBER</string>
    <string name="update1">UPDATE</string>
    <string name="param_fullname">fullname</string>
    <string name="param_email">email</string>
    <string name="url_dashboard">https://majlisstore.com/crm/api/majlisstore/home_page</string>
    <string name="url_selling_product">https://majlisstore.com/crm/api/majlisstore/category_products</string>
    <string name="url_recently">https://majlisstore.com/crm/api/majlisstore/recently_viewed</string>
    <string name="url_productdetails">https://majlisstore.com/crm/api/majlisstore/product_details</string>
    <string name="url_relatedproducts">https://majlisstore.com/crm/api/majlisstore/related_product</string>
    <string name="url_search">https://majlisstore.com/crm/api/majlisstore/search_products</string>
    <string name="url_products">https://majlisstore.com/crm/api/majlisstore/list_products</string>
    <string name="order_list_url">https://majlisstore.com/crm/api/majlisstore/orders</string>
    <string name="order_pro_url">https://majlisstore.com/crm/api/majlisstore/order_details</string>
    <string name="order_cancel_url">https://majlisstore.com/crm/api/majlisstore/ordercancel</string>
    <string name="url_addtocart">https://majlisstore.com/crm/api/majlisstore/add_to_cart</string>
    <string name="cart_url">https://majlisstore.com/crm/api/majlisstore/view_cart</string>
    <string name="cart_delete_url">https://majlisstore.com/crm/api/majlisstore/remove_cart</string>
</resources>