<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:fontFamily="@font/ubuntu"
        android:id="@+id/bot_nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/menu_home" />
    <item
        android:fontFamily="@font/ubuntu"
        android:id="@+id/bot_nav_notification"
        android:icon="@drawable/ic_notification"
        android:title="@string/menu_notification" />
    <item
        android:fontFamily="@font/ubuntu"
        android:id="@+id/bot_nav_video"
        android:icon="@drawable/box"
        android:title="@string/menu_video" />
      <item
          android:fontFamily="@font/ubuntu"
        android:id="@+id/bot_nav_account"
        android:icon="@drawable/ic_accounts"
        android:title="@string/menu_account" />


</menu>