<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/lay_close"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/ts8"
            android:paddingStart="@dimen/ts8"
            android:paddingRight="@dimen/ts8"
            android:paddingEnd="@dimen/ts8">

            <ImageView
                android:contentDescription="@string/imageview"
                android:layout_width="@dimen/ts20"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/back" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:contentDescription="@string/imageview"
                android:layout_width="@dimen/img3"
                android:layout_height="match_parent"
                android:src="@drawable/logo_h1"
                />


        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/ts05"
        android:background="@color/dgrey"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:padding="@dimen/ts8">

        <TextView
            android:text="@string/filters"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ubuntu"
            android:gravity="center_vertical"
            android:textColor="@color/black"
            android:textSize="@dimen/sp20" />

        <TextView
            android:id="@+id/clear_filter"
            android:text="@string/clear_filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ubuntu"
            android:gravity="center_vertical|end"
            android:textColor="@color/blue"
            android:textSize="@dimen/sp20" />


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/ts05"
        android:background="@color/dgrey"/>

    <LinearLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/white"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_weight="1.5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/brandstv_Id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/brands"
                android:textSize="@dimen/sp20"
                android:layout_margin="10dp"
                android:textColor="@color/green"
                android:fontFamily="@font/ubuntu_medium"
                />

            <TextView
                android:id="@+id/categorytv_Id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category"
                android:textSize="@dimen/sp20"
                android:layout_margin="10dp"
                android:textColor="@color/green"
                android:fontFamily="@font/ubuntu_medium"
                />

        </LinearLayout>

        <View
            android:layout_width="@dimen/ts05"
            android:layout_height="match_parent"
            android:background="@color/dgrey"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_sublist"
            android:overScrollMode="never"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_clear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/add_to_cart_button_design"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textSize="@dimen/sp16"
            android:padding="@dimen/ts12"
            android:gravity="center"
            android:layout_margin="1dp"
            android:layout_weight="1"
            />
        <TextView
            android:id="@+id/tv_done"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/add_to_cart_button_design"
            android:text="@string/done"
            android:textColor="@color/white"
            android:textSize="@dimen/sp16"
            android:padding="@dimen/ts12"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_margin="1dp"
            />

    </LinearLayout>


</LinearLayout>