<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary"
    android:gravity="center">

    <LinearLayout
        android:layout_marginTop="@dimen/ts24"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="@dimen/ts16">

        <ImageView
            android:id="@+id/imgNav"
            android:layout_width="@dimen/nav_img"
            android:layout_height="@dimen/nav_img"
            android:src="@drawable/user2"
            android:contentDescription="@string/imageview"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginTop="@dimen/ts8">

            <TextView
                android:fontFamily="@font/ubuntu"
                android:id="@+id/tvNav1"
                android:maxLines="1"
                android:ellipsize="end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp16"
                android:padding="@dimen/ts4"
                android:text="@string/navText1"
                android:textColor="@color/white"/>

            <TextView
                android:fontFamily="@font/ubuntu"
                android:id="@+id/tvNav2"
                android:maxLines="1"
                android:ellipsize="end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp16"
                android:padding="@dimen/ts4"
                android:text="@string/navText2"
                android:textColor="@color/white"/>

        </LinearLayout>


    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/ts1"
        android:background="@color/white"/>


</LinearLayout>